# Croissant

./: .gitattributes  README.md  meson.build  org.croissant.Croissant.json  org.croissantproject.Croissant.json
data/: meson.build  org.croissant.Croissant.desktop.in  org.croissant.Croissant.gschema.xml  org.croissant.Croissant.metainfo.xml.in  org.croissant.Croissant.service.in  org.croissantproject.Croissant.desktop.in  org.croissantproject.Croissant.gschema.xml  org.croissantproject.Croissant.metainfo.xml.in  org.croissantproject.Croissant.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: croissant.gresource.xml  croissant.in  main.py  meson.build  window.blp  window.py
src/gtk/: style.css
subprojects/: .gitignore  libpastry.wrap
